Backend/musicstore-backend/kubernetes/infra/tempo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:2.2.2
          args: ["-config.file=/etc/tempo.yaml"]
          volumeMounts:
            - name: tempo-config
              mountPath: /etc/tempo.yaml
              subPath: tempo.yaml
            - name: tempo-data
              mountPath: /tmp/tempo
          ports:
            - containerPort: 3200
              name: tempo
            - containerPort: 9411
              name: zipkin
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config
        - name: tempo-data
          persistentVolumeClaim:
            claimName: tempo-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: tempo
spec:
  selector:
    app: tempo
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3200
      name: tempo
