Backend/musicstore-backend/kubernetes/infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://musicstore-vault.vault.azure.net/certificates/store-cert/
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: store-aks
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: fancystrings.xyz
      http:
        paths:
          - backend:
              service:
                name: frontend-svc
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
  tls:
    - hosts:
        - fancystrings.xyz
      secretName: keyvault-store-aks

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://musicstore-vault.vault.azure.net/certificates/store-cert/
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: api.fancystrings.xyz
      http:
        paths:
          - backend:
              service:
                name: apigateway-svc
                port:
                  number: 80
            path: /gateway(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - api.fancystrings.xyz
      secretName: keyvault-store-aks

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://musicstore-vault.vault.azure.net/certificates/store-cert/
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: fancystrings.xyz
      http:
        paths:
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - fancystrings.xyz
      secretName: keyvault-store-aks
